# proyectos_flet

./: README.md
.github/workflows/: flet-web.yml
app.bk/src/: main.py
app.bk/src/components/: cart.py
app.bk/src/panel_restaurante/: admin_panel.py  pedidos.py
app.bk/src/panel_restaurante/views/: pedidos.py
app.bk/src/views/: carrito.py  checkout.py
delivery_app/: INFORME_MODIFICACIONES.md  MANUAL_USUARIO.md  README_TECNICO.md  gestor_masivo.py  migrate.py  restaurante.db
delivery_app/app/: pyproject.toml
delivery_app/app/src/: config.py  database.py  database_sqlite.py  main.py  schema.sql
delivery_app/app/src/app_views/: checkout.py
delivery_app/app/src/components/: cart.py  notifier.py
delivery_app/app/src/panel_restaurante/: admin_panel.py  pedidos.py
delivery_app/app/src/panel_restaurante/admin_views/: configuracion.py  menu_admin.py  pedidos.py
delivery_app/app/src/panel_restaurante/views/: configuracion.py  menu_admin.py  pedidos.py
delivery_app/app/src/views/: carrito.py  checkout.py  menu.py  seguimiento.py
delivery_app/backend/: config.py  crud.py  database.py  main.py  schemas.py
delivery_apps/: .gitignore  INFORME_MODIFICACIONES.md  INFORME_MODIFICACIONES_COPY.md  README.md  backup_full.json  backup_full_ads.json  db_admin.py  prompt
delivery_apps/backend/: .env.example  crud.py  main.py  models.py  requirements.txt  schemas.py
delivery_apps/dona_soco_app/: INFORME_MODIFICACIONES.md  ads_backup_full.json  db_admin.py
delivery_apps/dona_soco_app/app/: .gitignore  pyproject.toml
delivery_apps/dona_soco_app/app/src/: config.py  config.py.example  database.py  main.py
delivery_apps/dona_soco_app/app/src/app_views/: menu.py
delivery_apps/dona_soco_app/app/src/components/: cart.py
delivery_apps/dona_soco_app/app/src/panel_restaurante/admin_views/: configuracion.py  menu_admin.py  pedidos.py
delivery_apps/dona_soco_app/backend/: crud.py  main.py
delivery_apps/tortas_las_originales/: INFORME_MODIFICACIONES.md  tlo_backup_full.json
delivery_apps/tortas_las_originales/app/: nginx.conf  pyproject.toml  serve_spa.py
delivery_apps/tortas_las_originales/app/src/: config.py  database.py  main.py
delivery_apps/tortas_las_originales/app/src/app_views/: carrito.py  menu.py
delivery_apps/tortas_las_originales/app/src/components/: notifier.py
delivery_apps/tortas_las_originales/app/src/panel_restaurante/admin_views/: configuracion.py  menu_admin.py  pedidos.py
delivery_apps/tortas_las_originales/backend/: schemas.py
dona_soco_app/: INFORME_MODIFICACIONES.md  backup_full_01.json  db_admin.py  migrar_a_railway.py
dona_soco_app/app/: .gitignore  Dockerfile  nginx.conf  pyproject.toml
dona_soco_app/app/src/: config.py  database.py  main.py
dona_soco_app/app/src/app_views/: checkout.py  menu.py  seguimiento.py
dona_soco_app/app/src/assets/: initial_data.db
dona_soco_app/app/src/panel_restaurante/: admin_panel.py
dona_soco_app/app/src/panel_restaurante/admin_views/: configuracion.py  menu_admin.py  pedidos.py
dona_soco_app/backend/: Dockerfile  backend_dona_soco.db  crud.py  database.py  main.py  models.py  nohup.out  requirements.txt  schemas.py
dona_soco_app/backend/web/: flutter_bootstrap.js  flutter_service_worker.js
doña_soco_app/: INFORME_MODIFICACIONES.md  MANUAL_USUARIO.md  README_TECNICO.md  backend_dona_soco.db  limpiar_datos.py
doña_soco_app/app/: .gitignore  pyproject.toml
doña_soco_app/app/src/: config.py  database.py  main.py  probe_filepicker.py
doña_soco_app/app/src/app_views/: checkout.py  menu.py
doña_soco_app/app/src/components/: cart.py  notifier.py
doña_soco_app/app/src/panel_restaurante/: admin_panel.py  pedidos.py
doña_soco_app/app/src/panel_restaurante/views/: configuracion.bk.py  configuracion.py  configuracion.py.bk  menu_admin.py  menu_admin2.py  pedidos.py
doña_soco_app/app/src/tests/: test_cart_isolation.py
doña_soco_app/app/src/views/: carrito.py  checkout.py  checkout.py.bk  menu.py  seguimiento.py
doña_soco_app/app/storage/data/: dona_soco.db
doña_soco_app/app/storage/database/: schema.sql
doña_soco_app/backend/: crud.py  main.py  main_sqlite.py  models.py  requirements.txt
markdown_viewer_app/: pyproject.toml  requirements.txt
markdown_viewer_app/src/: main.py
